<resources>
    <string name="app_name">Franz Factor</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="signup">Sign UP</string>
    <string name="signin">Sign In</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confpassword">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="email">Email</string>
    <string name="genderr">Gender</string>
    <string name="contact">Contact</string>
    <string name="dobb">Date of Birth</string>
    <string name="hint_pincode">Pincode</string>
    <string name="hint_contactno">Contactno</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="franchisename">Franchise Name</string>
    <string name="category">Category</string>
    <string name="subcategory">Sub-Category</string>
    <string name="franchiselogo">Franchise Logo</string>
    <string name="franchiseinvest">Franchise Investment</string>
    <string name="franchisedesc">Franchise Detail</string>
    <string name="fralicenceno">Licence No.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="franchise_location">Franchise Location</string>
    <string name="budget">Budget</string>

    <string name="internet_connection_lost">You have no internet connection</string>
    <string name="internet_connection">You have internet connection</string>


    <string name="slide_1_title">Franz Factor</string>
    <string name="slide_1_desc">The easiest way to sell and buy Franchises</string>

    <string name="slide_2_title">Find Franchises</string>
    <string name="slide_2_desc">Search among various Franchises and their details available near you</string>

    <string name="slide_3_title">Post your Franchises</string>
    <string name="slide_3_desc">Start or Expand your Business</string>

    <string name="slide_4_title">Updates</string>
    <string name="slide_4_desc">Notifications regarding latest Franchises</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="aboutus">FRANZ FACTOR is the application which will possess all the datas and information about the franchise and the owner of it.That will make it easy for the clients to purchase the franchise and for the owner to sell it. Our objective is to make an online platform or android application for the franchise sellers and buyers</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>
</resources>
