<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="false"
    android:background="@color/cardview_shadow_end_color"
    android:elevation="50dp"
    card_view:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/franchisename"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:text="franchisename"
            android:textSize="20sp"
            android:textStyle="bold"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textStyle="bold"
    android:text="@string/first_name"
    android:textSize="20sp"
    android:layout_marginTop="35dp"
    android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fname"
            android:textAlignment="center"
            android:text="subcategory"
            android:textSize="20sp"
            android:layout_marginTop="60dp"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/last_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="85dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lname"
            android:text="subcategory"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="105dp"
         />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="125dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:text="subcategory"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="145dp"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="165dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:text="subcategory"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="185dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="205dp"
         />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state"
            android:text="subcategory"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="225dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/hint_pincode"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="245dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pincode"
            android:text="subcategory"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="265dp"
          />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="285dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact"
            android:textAlignment="center"
            android:text="subcategory"
            android:textSize="20sp"
            android:layout_marginTop="305dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/franchise_location"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="325dp"
          />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/flocation"
            android:textAlignment="center"
            android:text="subcategory"
            android:textSize="20sp"
            android:layout_marginTop="345dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="365dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/budget"
            android:textAlignment="center"
            android:text="subcategory"
            android:textSize="20sp"
            android:layout_marginTop="385dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_call"
                android:textColor="@color/white"
                android:background="@drawable/btn_shape"
                android:layout_marginTop="410dp"
                android:text="CALL NOW"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
