<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="info.kamlesh.Franzfactor.Login">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blurbg"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:gravity="top">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="@dimen/logo_w_h"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/logonew"
                        android:alpha="1" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- Login Button -->

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:background="@drawable/btn_shape"
                        android:text="@string/btn_signin"
                        android:textSize="20dp"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:background="@drawable/btn_shape"
                        android:textSize="20dp"
                        android:text="@string/btn_signup"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </ScrollView>


    </android.support.design.widget.CoordinatorLayout>


